feat(Azure-user-creation): Deleted description variable, send the description directly at the command without using a variable

--- a/adding-azure-user/testing_pipeline.yml
+++ b/adding-azure-user/testing_pipeline.yml
@@ -47,37 +47,7 @@ jobs:
     value: "$URL/_apis/git/repositories/$REPONAME/pullrequests?api-version=7.0"                
   - name: REVIEWERS
     value: "naiaragarcia@paradigmadigital.com adrianmartin@paradigmadigital.com fgiuliano@paradigmadigital.com hgomez@paradigmadigital.com jespinosa@paradigmadigital.com jhernantes@paradigmadigital.com kcardena@paradigmadigital.com madiaz@paradigmadigital.com"
-  - name: DESCRIPTION
-    value:
-    - "## What does this PR do?"
-    - "This PR is to add/remove users indicated at ticket ${{ parameters.branch }}"
-    - ""
-    - "## Why is it necessary?"
-    - "Because the users need this access to perform his daily job."
-    - ""
-    - "## Pull request type"
-    - "- [ ] Bugfix"
-    - "- [ ] New feature"
-    - "- [X] IaC change"
-    - "- [ ] Add new alert"
-    - "- [ ] Alert modification"
-    - ""
-    - "## Related ticket"
-    - "${{ parameters.branch }}"
-    - ""
-    - "Close or affect [this](https://jira.eurocontrol.int/browse/${{ parameters.branch }}) ticket."
-    - ""
-    - "## CI Output"
-    - ""
-    - "N/A"
-    - ""
-    - "## Checks"
-    - ""
-    - "- [ ] The PR has a descriptive title"
-    - "- [ ] The changes section has been checked"
-    - "- [ ] A person has been assigned to this PR"
-    - "- [ ] Clear comments `<-- -->` from sections"    
-
+    
   steps:
   - script: |
       echo "Download the repository"
@@ -185,7 +155,7 @@ jobs:
         then
           echo "PR exists already"
         else
-          az repos pr create -r $REPONAME -s $BRANCHTARGET -p $PROJECT --org $ORGURL --delete-source-branch true --reviewer $REVIEWERS --title "Performed the actions requested at ticket ${{ parameters.branch }}"   
+          az repos pr create -r $REPONAME -s $BRANCHTARGET -p $PROJECT --org $ORGURL --delete-source-branch true --description "## What does this PR do?" "This PR is to add/remove users indicated at ticket ${{ parameters.branch }}" "" "## Why is it necessary?" "Because the users need this access to perform his daily job." "" "## Pull request type" "- [ ] Bugfix" "- [ ] New feature" "- [X] IaC change" "- [ ] Add new alert" "- [ ] Alert modification" "" "## Related ticket" "${{ parameters.branch }}" "" "Close or affect [this](https://jira.eurocontrol.int/browse/${{ parameters.branch }}) ticket." "" "## CI Output" "" "N/A" "" "## Checks" "" "- [ ] The PR has a descriptive title" "- [ ] The changes section has been checked" "- [ ] A person has been assigned to this PR" "- [ ] Clear comments `<-- -->` from sections" --reviewer $REVIEWERS --title "Performed the actions requested at ticket ${{ parameters.branch }}"   
         fi
       fi
     displayName: "Pull Request creation"
