--- a/adding-azure-user/adding-user-to-azure.yml
+++ b/adding-azure-user/adding-user-to-azure.yml
@@ -68,8 +68,8 @@ jobs:
           then 
             echo "Adding new user to dpro_developer group"
             sed -i "/group_infra_dprodev_members/a \ \ \"${{ parameters.mail }}\"," terraform.tfvars
+            echo "User added to dpro_developer group"
           fi
-          echo "User added to dpro_developer group"
         ;;
         dplt_pipeline)
           echo "Check that user is not currently at the dplt_pipeline Azure Group"
@@ -85,8 +85,8 @@ jobs:
           then 
             echo "Adding new user to dplt_pipeline Azure Devops Group"
             sed -i "/group_azdevops_dpro_admin_members/a \ \ \"${{ parameters.mail }}\"," terraform.tfvars
+            echo "User added to dplt_pipeline groups"
           fi        
-          echo "User added to dplt_pipeline groups"
         ;;
         dplt_developer)
           echo "Check that user is not currently at the group dplt_developer"
@@ -95,8 +95,8 @@ jobs:
           then 
             echo "Adding new user to dplt_developer Azure Devops Group"
             sed -i "/group_dplt_dev_members/a \ \ \"${{ parameters.mail }}\"," terraform.tfvars
+            echo "User added to dplt_developer group"
           fi     
-          echo "User added to dplt_developer group"
         ;;
         infra_admin)
           echo "Check that user is not currently at the group infra_dev_owners"
@@ -119,8 +119,8 @@ jobs:
           then 
             echo "Adding new user to azdevops_dpro_admin_owners group"
             sed -i "/group_azdevops_dpro_admin_owners/a \ \ \"${{ parameters.mail }}\"," terraform.tfvars
+            echo "User added to infra_admin groups"
           fi       
-          echo "User added to infra_admin groups"
         ;;
         remove_user)
           echo "Remove user from all groups"
@@ -162,8 +162,8 @@ jobs:
       fi
     displayName: "Pull Request creation for $AZUREREPO repository"
 
-  - script: |
-      if [[ ${{ parameters.option }} == dplt_pipeline ]]
+  - script: | 
+      if [[ ${{ parameters.option }} == dplt_pipeline ]] || [[ ${{ parameters.option }} == remove_user ]]
       then
         echo "Download the $AZUREDEVOPSREPO repository"
         git -c http.extraHeader="Authorization: bearer $(System.AccessToken)" clone https://ecl-ado-factory@dev.azure.com/ecl-ado-factory/$PROJECT/_git/$AZUREDEVOPSREPO
@@ -172,16 +172,27 @@ jobs:
         cd $AZUREDEVOPSREPO
         git checkout -b $BRANCHTARGET
 
-        echo "Added a new line to terraform.tfvars file at $AZUREDEVOPSREPO repository"
-        echo "Check that user is not currently at the group all_users"
-        mail=`sed -n '/^all_users/,/^]/p' terraform.tfvars | grep ${{ parameters.mail }}`
-        if [[ -z "$mail" ]] 
-        then 
-          echo "Adding new user to all_users group"
-          sed -i "/all_users/a \ \ \"${{ parameters.mail }}\"," terraform.tfvars
-        fi
-        echo "User added to all_users group"
-
+        case ${{ parameters.option }} in
+          dplt_pipeline)
+            echo "Check that user is not currently at the group all_users"
+            mail=`sed -n '/^all_users/,/^]/p' terraform.tfvars | grep ${{ parameters.mail }}`
+            if [[ -z "$mail" ]] 
+            then 
+              echo "Adding new user to all_users group"
+              sed -i "/all_users/a \ \ \"${{ parameters.mail }}\"," terraform.tfvars
+              echo "User added to all_users group"
+            fi
+          ;;
+          remove_user)
+            echo "Remove user from all groups"
+            sed -i "/${{ parameters.mail }}/d" terraform.tfvars
+            echo "User removed from all groups"
+          ;;
+          *)
+            echo "Bad option"
+          ;;
+        esac
+        
         echo "Commit new branch to remote repository $AZUREDEVOPSREPO"
         git add *
         git commit -m "Performed the actions requested at ticket ${{ parameters.branch }}"
