feat(Azure-user-creation): Adding terraform tasks for init and validate to test them

--- a/adding-azure-user/adding-user-to-azure.yml
+++ b/adding-azure-user/adding-user-to-azure.yml
@@ -144,13 +144,25 @@ jobs:
       echo "Login to az devops"
       echo $(System.AccessToken) | az devops login
 
-      echo "Launching terraform commands to apply changes"
-      terraform init
-      terraform plan
-
       echo "Push the new branch to remote repository $AZUREREPO"
       git -c http.extraHeader="Authorization: bearer $(System.AccessToken)" push origin $BRANCHTARGET
     displayName: "Clone repository to modify and push new branch"
+
+  - task: ms-devlabs.azure-pipelines-tasks-terraform.azure-pipelines-tasks-terraform-cli.TerraformCLI@0
+    displayName: 'Run terraform init'
+    inputs:
+      command: init
+      workingDirectory: ${{ variables.AZUREREPO }}/004-aad
+    env:
+        ARM_CLIENT_ID: $(terraform-app-client-id)
+        ARM_CLIENT_SECRET: $(terraform-app-secret)
+        ARM_TENANT_ID: "9e296acd-1e44-44f0-8c77-cc9dbce85489"
+
+  - task: ms-devlabs.azure-pipelines-tasks-terraform.azure-pipelines-tasks-terraform-cli.TerraformCLI@0
+    displayName: 'Run terraform init'
+    inputs:
+      command: validate
+      workingDirectory: ${{ variables.AZUREREPO }}/004-aad
     env:
         ARM_CLIENT_ID: $(terraform-app-client-id)
         ARM_CLIENT_SECRET: $(terraform-app-secret)
@@ -215,10 +227,6 @@ jobs:
 
         echo "Login to az devops"
         echo $(System.AccessToken) | az devops login
-
-        echo "Launching terraform commands to apply changes"
-        terraform init
-        terraform plan
 
         echo "Push the new branch to remote repository $AZUREDEVOPSREPO"
         git -c http.extraHeader="Authorization: bearer $(System.AccessToken)" push origin $BRANCHTARGET
