feat(Azure-user-creation): Modified the variables used as workingDirectory at terraform tasks

--- a/adding-azure-user/adding-user-to-azure.yml
+++ b/adding-azure-user/adding-user-to-azure.yml
@@ -151,14 +151,14 @@ jobs:
     inputs:
       provider: 'azurerm'
       command: 'init'
-      workingDirectory: '/${{ parameters.AZUREREPO }}/004-aad'
+      workingDirectory: '/${{ variables.AZUREREPO }}/004-aad'
       backendServiceArm: 'ecl-az-fact-svc-01-armconnection'
 
   - task: TerraformTaskV4@4
     inputs:
       provider: 'azurerm'
       command: 'validate'
-      workingDirectory: '/${{ parameters.AZUREREPO }}/004-aad'
+      workingDirectory: '/${{ variables.AZUREREPO }}/004-aad'
 
   - script: |
       echo "Create needed variables for the PR at $AZUREREPO repository"
