--- a/adding-azure-user/testing_pipeline.yml
+++ b/adding-azure-user/testing_pipeline.yml
@@ -155,3 +155,22 @@ jobs:
         fi
       fi
     displayName: "Pull Request creation"
+
+  - task: AzureCLI@2
+    displayName: "Merging with main branch at repository" 
+    env:
+      ARM_CLIENT_ID: $(terraform-app-client-id)
+      ARM_CLIENT_SECRET: $(terraform-app-secret)
+      ARM_TENANT_ID: "9e296acd-1e44-44f0-8c77-cc9dbce85489"  #Must move to KeyValut or inside provider.tf
+    inputs:
+      azureSubscription: 'ecl-az-fact-svc-01-armconnection'
+      scriptType: 'bash'
+      scriptLocation: 'inlineScript'
+      inlineScript: |
+        #!/bin/bash    
+
+        echo "Get the PR ID to perform the merge action"
+        PRID=`az repos pr list --org $ORGURL -p $PROJECT -r $REPONAME -s $BRANCHTARGET | grep codeReviewId | awk '{print $2}' | cut -d',' -f1`
+
+        echo "Merging the PR with main"
+        az repos pr update --org $ORGURL --id $PRID --status completed
