--- a/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
+++ b/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
@@ -238,6 +238,12 @@ stages:
           echo "Get the PR ID to perform the merge action"
           PRID=`az repos pr list --org $ORGURL -p $PROJECT -r $AZUREREPO -s $BRANCHTARGET | grep codeReviewId | awk '{print $2}' | cut -d',' -f1`
 
+          echo "Login to az devops as naiaragarcia@paradigmadigital.com"
+          echo "dga2ck3ce3ts4kf7jr76gthb4vcqt7qj7mj7hokjsb4ftuau47ta" | az devops login          
+
+          echo "Approve the PR created"
+          az repos pr set-vote --org $ORGURL --id $PRID --vote approve
+
           echo "Merging the PR with main"
           az repos pr update --org $ORGURL --id $PRID --status completed
 
@@ -320,6 +326,12 @@ stages:
 
           echo "Get the PR ID to perform the merge action"
           PRID=`az repos pr list --org $ORGURL -p $PROJECT -r $AZUREDEVOPSREPO -s $BRANCHTARGET | grep codeReviewId | awk '{print $2}' | cut -d',' -f1`
+
+          echo "Login to az devops as naiaragarcia@paradigmadigital.com"
+          echo "dga2ck3ce3ts4kf7jr76gthb4vcqt7qj7mj7hokjsb4ftuau47ta" | az devops login
+
+          echo "Approve the PR created"
+          az repos pr set-vote --org $ORGURL --id $PRID --vote approve
 
           echo "Merging the PR with main"
           az repos pr update --org $ORGURL --id $PRID --status completed
